[tool.poetry]
name = "pyproteinsext"
version = "3.1.2"
description = "'Extending pyproteins for bioinformatics tools&services'"
authors = ["glaunay <pitooon@gmail.com>"]
license = "BSD"

[tool.poetry.dependencies]
python = ">=3.8,<4.0"
pyproteins = "^2.0.0"
biopython = "^1.79"
bs4 = "^0.0.1"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
